<resources>
    <string name="app_name">PartyBox</string>
    <string name="new_party">New Party</string>
    <string name="made_party">Made Party</string>
    <string name="next">Next</string>
    <string name="ask_name">Party Name</string>
    <string name="ask_location">Party Location</string>
    <string name="ask_time">Party Time</string>
    <string name="ask_num_guest">Number of Guests</string>
    <string name="enter_info">Enter Party Information</string>
    <string name="ask_start">Party Start Time</string>
    <string name="ask_end">Party End Time</string>
    <string name="ask_date">Party Date</string>
    <string name="back">Back</string>
    <string name="card_prompt">Card Number</string>
    <string name="card_name">Name on Card</string>
    <string name="card_exp">Card Expire Date</string>
    <string name="card_security">Security Code</string>
    <string name="card_type">Card Type</string>
    <string name="delete">Delete</string>
    <string name="enter_name">Enter Party Name</string>
    <string name="enter_num_guests">Enter Number of Guests</string>
    <string name="enter_date">Enter Party Date</string>
    <string name="enter_location">Enter Party Location</string>
    <string name="enter_start">Enter Party Start Time</string>
    <string name="enter_end">Enter Party End Time</string>
    <string name="enter_payment_prompt">Payment: </string>
    <string name="enter_address_prompt">Address: </string>
    <string name="empty_payment">Enter Payment</string>
    <string name="empty_address">Enter Address</string>
    <string name="add_symbol">+</string>
    <string name="shipping_address_header">Shipping Address</string>
    <string name="cart_contents_header">Cart Contents: $</string>
    <string name="order">ORDER</string>
    <string name="item">Item</string>
    <string name="price">$Price$</string>
    <string name="quantity">Quantity</string>
    <string name="check_out">Checkout</string>
    <string name="save">save</string>
    <string name="made_party_header">View/Edit Party</string>
    <string name="commit">Enter Payment Info</string>
    <string name="visa">VISA</string>
    <string name="mastercard">MASTERCARD</string>
    <string name="amex">AMERICAN EXPRESS</string>
    <string name="total_price">Total Price</string>
    <string name="PartyBox">Party Box</string>
    <string name="streetAddress">Enter Street Address</string>
    <string name="state">Enter Your State</string>
    <string name="city">Enter Your City</string>
    <string name="zipCode">Enter Your Zip Code</string>
    <string name="aptNum">Apartment Number</string>
    <string name="order_complete">Thank you for your order!</string>
    <string name="home">Home</string>
</resources>
