<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- main linear layout-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- top linear layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- Title of screen-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/enter_info"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Linear Layout for inputs-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_name"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_name"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textStyle="italic" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/ask_num_guest"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_guests"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_location"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_location"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_date"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_date"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_start"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_start_t"
                android:backgroundTint="@color/light_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textStyle="italic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_end"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/p_end_t"
                android:backgroundTint=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textStyle="italic" />

        </LinearLayout>

        <!-- Linear Layout for buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <!-- Back button-->
            <Button
                android:id="@+id/back"
                android:layout_width="71dp"
                android:layout_height="56dp"
                android:layout_margin="5dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/red"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <!-- Next button-->
            <Button
                android:id="@+id/next"
                android:layout_width="71dp"
                android:layout_height="56dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="225dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/blue"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>